<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/configuration"
            android:textAllCaps="true"
            android:textColor="#222222"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/user_profile"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/user_profiles" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/signal_mode"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/signal_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/signal_modes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/automatic_off"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/auto_off_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enabled" />

        <EditText
            android:id="@+id/auto_off_timeout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/timeout"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/blind_bolus_step_size"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/blind_bolus_step_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/step_sizes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/cartridge_warning_level"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cartridge_warning_automatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/automatic" />

        <EditText
            android:id="@+id/cartridge_warning_level"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/delivery_speed"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/delivery_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/delivery_speeds" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/display_orientation"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/display_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/display_orientations" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/display_background_color"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/infusion_set_settings"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tubing" />

                <EditText
                    android:id="@+id/tubing_fill_amount"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/canulla" />

                <EditText
                    android:id="@+id/canulla_fill_amount"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>