<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/temporary_basal_rate"
        android:textAllCaps="true"
        android:textColor="#222222"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/extended_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instant_amount_container"
            android:layout_alignParentBottom="false"
            android:layout_alignStart="@+id/instant_amount_container"
            android:layout_below="@+id/instant_amount_container"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_timelapse" />

            <EditText
                android:id="@+id/tbr_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/duration"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instant_amount_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="%"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbr_amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/amount"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/extended_container"
            android:layout_centerHorizontal="true"
            android:text="@string/ok" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/custom_tbr_list"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent" />


    <Button
        android:id="@+id/add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>